----------------------------------------------------------------------
Wed Jul  9 22:13:29 2008                        Michael Jennings (mej)

Refactor macro replacements in specgen to use actual values supplied
by rpm.

Fix fallback version comparison routine handling of "0" strings.

Re-add rpm5 fix that somehow got lost -- install SRPMs regardless of
dependencies.
----------------------------------------------------------------------
Tue Sep 30 08:03:01 2008                        Michael Jennings (mej)

Allow zero-byte source files, ridiculous as it is.
----------------------------------------------------------------------
Tue Dec 16 20:40:36 2008                        Michael Jennings (mej)

Order of rpm options matters.  Fixes mzbuild -a <arch>.
----------------------------------------------------------------------
Wed Dec 24 23:52:36 2008                        Michael Jennings (mej)

Starting to tidy up in preparation for release.
----------------------------------------------------------------------
Thu Mar  5 23:15:01 2009                        Michael Jennings (mej)

Fix SCM auto-detection and add support for -devel package creation to
specgen.

Please report any outstanding bugs.  I'm hoping to release 1.9 soon.
----------------------------------------------------------------------
Fri Jun 26 19:47:18 2009                        Michael Jennings (mej)

Fix subcommand execution.

Exclude .svn trees from ISO's and generated sources.
----------------------------------------------------------------------
Thu Jul  9 01:33:15 2009                        Michael Jennings (mej)

Fixup for svn move.

Add support for rpmbuild stages and short-circuiting.
----------------------------------------------------------------------
Thu Aug 27 21:11:44 2009                        Michael Jennings (mej)

Check parent directory of non-directory modules.
----------------------------------------------------------------------